responsive.css: fixed z-indexing of glass style

--- a/estudiebuddie/src/assets/css/responsive.css
+++ b/estudiebuddie/src/assets/css/responsive.css
@@ -146,7 +146,7 @@
         grid-template-columns: 1fr;
         text-align: center;
         gap: 20px;
-        z-index: -1;
+        /* z-index: -1; */
     }
     .hero-content {
         text-align: center;
